--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL="http://161.35.41.64:9271"
-REACT_APP_HEALTHLOQ_API_BASE_URL="https://healthloqserviceapi-dev.azurewebsites.net"
+REACT_APP_API_BASE_URL="http://localhost:7777"
+REACT_APP_HEALTHLOQ_API_BASE_URL="http://localhost:3005"
